welcome.lessons.welcome.loopdowhile.Poucet.scala.error
Poucet:12: error: not found: value sortieTrouvée
} while (!sortieTrouvée)
          ^